--- a/PragmaticAnalyzer/MVVM/Views/Viewer/ViewerView.xaml
+++ b/PragmaticAnalyzer/MVVM/Views/Viewer/ViewerView.xaml
@@ -11,10 +11,12 @@
                Height="640"
                Width="1200"
                Canvas.Top="3" />
+        
         <Button Content="Специалист по ЗИ"
                 Cursor="Hand"
                 FontSize="17"
-                Command="{Binding OpenSpecialistViewCommand}"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.SpecialistVm}"
                 Canvas.Left="1"
                 RenderTransformOrigin="0.5,0.5"
                 Height="44"
@@ -31,85 +33,103 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
+        
         <Button Content="Меры защиты"
                 Cursor="Hand"
                 FontSize="17"
-                Command="{Binding OpenProtectionMeasureViewCommand}"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.ProtectionMeasureVm}"
                 Canvas.Left="189"
                 Canvas.Top="79"
                 Height="44"
                 Width="209"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top" />
+        
         <Button Content="Уязвимости"
                 Cursor="Hand"
                 FontSize="17"
-                Command="{Binding OpenVulViewCommand}"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.VulnerabilitieVm}"
                 Canvas.Left="421"
                 Canvas.Top="153"
                 Height="45"
                 Width="208"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center" />
+        
         <Button Content="Нарушитель"
                 Cursor="Hand"
                 FontSize="17"
-                Command="{Binding OpenViolatorViewCommand}"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.ViolatorVm}"
                 Canvas.Top="343"
                 Height="45"
                 Width="209"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top" />
+        
         <Button Content="Угрозы"
                 Cursor="Hand"
                 FontSize="17"
-                Command="{Binding OpenThredViewCommand}"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.ThreatVm}"
                 Canvas.Left="189"
                 Canvas.Top="419"
                 Height="43"
                 Width="209" />
+        
         <Button  Content="Техники и тактики"
                  Cursor="Hand"
                  FontSize="17"
-                 Command="{Binding OpenTacticViewCommand}"
+                 Command="{Binding ChangeView}"
+                 CommandParameter="{Binding ViewModelsService.TacticVm}"
                  Canvas.Left="421"
                  Canvas.Top="491"
                  Height="44"
                  Width="208"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Center" />
+        
         <Button Content="Риски ИБ"
                 Cursor="Hand"
                 FontSize="17"
-                Command="{Binding OpenOutcomesViewCommand}"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.OutcomeVm}"
                 Canvas.Left="695"
                 Canvas.Top="230"
                 Height="43"
                 Width="209" />
+        
         <Button Content="Эксплойты"
                 Cursor="Hand"
                 FontSize="17"
-                Command="{Binding OpenExploitViewCommand}"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.ExploitVm}"
                 Canvas.Left="676"
                 Canvas.Top="553"
                 Height="47"
                 Width="209"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top" />
+        
         <Button  Content="Данные о текущем состоянии ПФ СОПКА"
                  Cursor="Hand"
                  FontSize="12"
-                 Command="{Binding OpenReferenceStatusViewCommand}"
+                 Command="{Binding ChangeView}"
+                 CommandParameter="{Binding ViewModelsService.CurrentStatusVm}"
                  Canvas.Left="923"
                  Canvas.Top="405"
                  Height="44"
                  Width="277"
                  HorizontalAlignment="Center"
                  VerticalAlignment="Top" />
+        
         <Button Content="Данные об эталонном состоянии ПФ СОПКА"
                 Cursor="Hand"
                 FontSize="10"
-                Command="{Binding }"
+                Command="{Binding ChangeView}"
+                CommandParameter="{Binding ViewModelsService.ReferenceStatusVm}"
                 Canvas.Left="991"
                 Canvas.Top="159"
                 Height="50"
